Fix error null when there's no addons downloaded